@@ -12,7 +12,9 @@ import java.util.List;
 import javax.swing.JFileChooser;
 import javax.swing.JTabbedPane;
 
-/** @author uchiyama */
+/**
+ * @author uchiyama
+ */
 public class SaveAction extends UIAbstractAction {
 
   /** */
@@ -43,7 +45,7 @@ public class SaveAction extends UIAbstractAction {
 
         CSVWriter writer = new CSVWriter(selectFile, "SJIS");
         List<CellInfo[]> csvList =
-            csvTagEditorUI.getTableMap().get(new Integer(tabPane.getSelectedIndex()));
+            csvTagEditorUI.getTableMap().get(Integer.valueOf(tabPane.getSelectedIndex()));
         if (csvList == null) {
           System.out.println(tabPane.getSelectedComponent());
         }
